--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="nav-links">
                 <a href="#home" onclick="showPage('home'); return false;">Home</a>
                 <a href="#services" onclick="showPage('services'); return false;">Services</a>
+                <a href="#about" onclick="showPage('about'); return false;">About Us</a>
                 <a href="#why" onclick="showPage('why'); return false;">Why Us</a>
                 <a href="#app" onclick="showPage('app'); return false;" class="btn-start">Get Quote</a>
                 <a href="#admin" onclick="openAdminModal(); return false;" class="btn-admin-nav">🔐 Admin</a>
-                <button class="theme-toggle" onclick="toggleTheme()" title="Toggle Dark/Light Mode">🌙</button>
             </div>
         </div>
     </nav>
@@ -113,6 +113,36 @@
                 <div class="service-icon">📊</div>
                 <h3>Track Impact</h3>
                 <p>Monitor your environmental savings in real-time</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- ABOUT US PAGE -->
+    <div id="about-page" class="page">
+        <div class="page-header">
+            <h1>About NeoOre</h1>
+        </div>
+        <div class="about-container">
+            <div class="about-content">
+                <h2>Our Mission</h2>
+                <p>Started in IITB 2025 by Animesh, Chinmay and Sasmit, working for a better future</p>
+                <div class="team-section">
+                    <h3>Meet The Founders</h3>
+                    <div class="founders">
+                        <div class="founder">
+                            <h4>Animesh</h4>
+                            <p>Co-Founder & CTO</p>
+                        </div>
+                        <div class="founder">
+                            <h4>Chinmay</h4>
+                            <p>Co-Founder & COO</p>
+                        </div>
+                        <div class="founder">
+                            <h4>Sasmit</h4>
+                            <p>Co-Founder & Business Lead</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -234,9 +264,9 @@
                 </div>
             </div>
 
-            <h2 style="color: var(--primary); margin-top: 40px; margin-bottom: 25px; font-size: 1.5em;">Recent Orders</h2>
+            <h2 style="color: #FC6736; margin-top: 40px; margin-bottom: 25px; font-size: 1.5em;">Recent Orders</h2>
             <div id="orders-list" class="orders-list">
-                <p style="text-align: center; color: var(--text-secondary);">No orders yet</p>
+                <p style="text-align: center; color: #666;">No orders yet</p>
             </div>
         </div>
     </div>
